[Web Payments] Fix is_ready_to_pay when no shipping option selected

Bug: 728507
Change-Id: I15a6fdc5dca349894d1682520e7c99958b3953f3
Reviewed-on: https://chromium-review.googlesource.com/521863
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476396}
Former-commit-id: a8814672c6782eeb7bbf080bbc84026fefc17c85