components/payments/content/payment_request_state.cc
@@ -319,6 +319,9 @@ bool PaymentRequestState::ArePaymentOptionsSatisfied() {
   if (!profile_comparator()->IsShippingComplete(selected_shipping_profile_))
     return false;
 
+  if (spec_->request_shipping() && !spec_->selected_shipping_option())
+    return false;
+
   return profile_comparator()->IsContactInfoComplete(selected_contact_profile_);
 }
 
